Added community page

--- a/community_and_resources/templates/bio_page.html
+++ b/community_and_resources/templates/bio_page.html
@@ -10,32 +10,26 @@
       
   </head>
   <body style="margin:5px;padding:5px">
-    <div class="row">
-      <div class="col-sm-4">
-        <div class="card">
-          <img src="../blank-profile-picture.png" class="card-img-top">
-          <div class="card-body">
-            <h5 class="card-title">RST Position<br>Full Name</h5>
-          </div>
+    <div class="card-columns">
+      <div class="card">
+        <img src="../blank-profile-picture.png" class="card-img-top">
+        <div class="card-body">
+          <h5 class="card-title">RST Position<br>Full Name</h5>
         </div>
       </div>
-      <div class="col-sm-4">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">About Me</h5>
-            <p class="card-text">
-              Here is where I introduce myself and talk about all of my interests, goals and dreams. Where I come from may interest you and I'm in my second year of blank majoring in blank.
-            </p>
-          </div>
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">About Me</h5>
+          <p class="card-text">
+            Here is where I introduce myself and talk about all of my interests, goals and dreams. Where I come from may interest you and I'm in my second year of blank majoring in blank.
+          </p>
         </div>
       </div>
-      <div class="col-sm-4">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">Contact Details</h5>
-            <p class="card-text"><b>Phone: </b>0412 345 678<br><b>Email: </b>jsmi0001@student.monash.edu</p>
-            <a href="#" class="btn btn-primary">Facebook</a>
-          </div>
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Contact Details</h5>
+          <p class="card-text"><b>Phone: </b>0412 345 678<br><b>Email: </b>jsmi0001@student.monash.edu</p>
+          <a href="#" class="btn btn-primary">Facebook</a>
         </div>
       </div>
     </div>
