--- a/community_and_resources/templates/bio_page.html
+++ b/community_and_resources/templates/bio_page.html
@@ -1,45 +1,37 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+{% extends "base.html"%}
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-      
-  </head>
-  <body style="margin:5px;padding:5px">
+{% block nav %}
+    {% include "standard_header.html" %}
+{% endblock %}
+
+{% block body %}
+  <div class="container">
     <div class="card-columns">
       <div class="card">
-        <img src="../blank-profile-picture.png" class="card-img-top">
+        <img src="{{ person.picture.url }}" class="card-img-top">
         <div class="card-body">
-          <h5 class="card-title">RST Position<br>Full Name</h5>
+          <h5 class="card-title">{{ person.position }}<br>{{ person.name }}</h5>
         </div>
       </div>
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">About Me</h5>
           <p class="card-text">
-            Here is where I introduce myself and talk about all of my interests, goals and dreams. Where I come from may interest you and I'm in my second year of blank majoring in blank.
+            {{ person.bio }}
           </p>
         </div>
       </div>
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">Contact Details</h5>
-          <p class="card-text"><b>Phone: </b>0412 345 678<br><b>Email: </b>jsmi0001@student.monash.edu</p>
-          <a href="#" class="btn btn-primary">Facebook</a>
+          <p class="card-text">
+            {% if person.phone %}<b>Phone: </b><a href="tel:{{ person.phone }}">{{ person.phone }}</a>{% endif %}
+            <br>
+            {% if person.email %}<b>Email: </b><a href="mailto:{{ person.email }}">{{ person.email }}</a>{% endif %}
+          </p>
+          {% if person.facebook %}<a href="#"><span class="fab fa-facebook-square" style="font-size: 2em"></span></a> {% endif %}
         </div>
       </div>
     </div>
-    
-    
-    
-<!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-  </body>
-</html>
+  </div>
+{% endblock %}
